<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/entryFragment">

    <fragment
        android:id="@+id/entryFragment"
        android:name="com.gersseba.garden.fragment.EntryFragment"
        android:label="@string/entry_screen_title"
        tools:layout="@layout/fragment_entry">

        <action
            android:id="@+id/action_entryFragment_to_myPlantsFragment"
            app:destination="@id/myPlantsFragment" />

        <action
            android:id="@+id/action_entryFragment_to_carePlanFragment"
            app:destination="@id/carePlanFragment" />
    </fragment>

    <fragment
        android:id="@+id/myPlantsFragment"
        android:name="com.gersseba.garden.fragment.MyPlantsFragment"
        android:label="@string/my_plants_screen_title"
        tools:layout="@layout/fragment_my_plants" />

    <fragment
        android:id="@+id/carePlanFragment"
        android:name="com.gersseba.garden.fragment.CarePlanFragment"
        android:label="@string/care_plan_screen_title"
        tools:layout="@layout/fragment_care_plan" />
</navigation>